# hvhgod-discord-bot-remastered

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Update.sh  alembic.ini  compose.yaml  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  docker.yml
assets/settings/: colors.toml  emojis.toml  messages.toml
helpers/: Clean-Startup.ps1  wait_to_db.py
scripts/: migrate-entrypoint.sh  migrate.sh
spooky/bot/: __init__.py  __main__.py  context.py  prefix.py
spooky/bot/extensions/devtool/: __init__.py  commands.py  constants.py  helpers.py  services.py  utils.py
spooky/bot/extensions/help/: __init__.py  commands.py  models.py  utils.py  view.py
spooky/bot/extensions/hooks/: __init__.py  error_handler.py  event.py
spooky/bot/extensions/hooks/db_sync/: __init__.py  tasks.py  (+2 more)
spooky/bot/extensions/prefix/: __init__.py  commands.py  models.py  utils.py
spooky/core/: __init__.py  checks.py  exceptions.py  logging.py  telemetry.py
spooky/db/: __init__.py  errors.py  models.py  session.py
spooky/ext/: batched.py  constants.py  db.py  http.py  logging.py  message.py  on_off.py  time.py  truncate.py  urls.py
spooky/ext/checks/: __init__.py  authorization.py  configurable_member.py  configurable_role.py  owner.py
spooky/ext/components/: __init__.py  base_view.py  command_gate.py  modal.py  pagination.py  permissions.py  report_embed.py  url_button.py
spooky/ext/components/v2/: __init__.py  base_view.py  card.py  confirmation.py  pagination.py
spooky/ext/patches/: __init__.py  container_view_store.py
spooky/models/: __init__.py  cache.py  query.py  utils.py
spooky/models/base_models/: __init__.py  base.py  guild.py  user.py
spooky/models/entities/: __init__.py  join_pings.py
spooky/models/entities/auto/: __init__.py  models.py
spooky/models/entities/bot_settings/: __init__.py  models.py
spooky/models/entities/buyers/: __init__.py  models.py
spooky/models/entities/logging/: __init__.py  enums.py  events.py  models.py  moderation.py
spooky/models/entities/media/: __init__.py  models.py
spooky/models/entities/moderation/: __init__.py  enums.py  models.py  thresholds.py
spooky/models/entities/owners/: __init__.py  enums.py  models.py
spooky/models/entities/permissions/: __init__.py  enums.py  models.py
spooky/models/entities/premium/: __init__.py  models.py
spooky/models/entities/utility/: __init__.py  models.py
spooky/premium/: __init__.py  auto_perks.py  cache.py  entitlements.py  enums.py  store.py
spooky/redis/: __init__.py  session.py
typings/thefuzz/: __init__.py  __init__.pyi  process.py  process.pyi
(+9 files in other folders)
